--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/goland,linux,windows,go
+/lection2/sample_input.json
+/lection2/out.json
+
